Basket Coupon-Campaign Relation Adjusted

--- a/OnlineSaleSiteAuth/Views/Basket/Index.cshtml
+++ b/OnlineSaleSiteAuth/Views/Basket/Index.cshtml
@@ -44,7 +44,10 @@
                 <tr>
                     <td>@item.ProductName</td>
                     <td>@item.Quantity</td>
-                    <td id="totalPrice">@item.TotalPrice</td>
+                    <td id="totalPrice">
+                            @item.TotalPrice
+                        
+                    </td>
                     <td>
                         @foreach (var image in item.Images)
                         {
