Added Add Campaign

--- a/OnlineSaleSiteAuth/Views/_ViewImports.cshtml
+++ b/OnlineSaleSiteAuth/Views/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using OnlineSaleSiteAuth.Models.Category
 @using OnlineSaleSiteAuth.Models.Basket
 @using OnlineSaleSiteAuth.Models.Coupon
+@using OnlineSaleSiteAuth.Models.Campaign
 
 @using OnlineSalesAuth.Persistence
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
