--- a/OnlineSaleSiteAuth/Views/Shared/_Layout.cshtml
+++ b/OnlineSaleSiteAuth/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">OnlineSaleSiteAuth</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Product" asp-action="Index">OnlineSaleSiteAuth</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,18 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Coupon" asp-action="Create">Add Coupon</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="CustomPage" asp-action="Create">Add Custom Page</a>
+                            </li>
                         }
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="customPageDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Custom Pages
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="customPageDropdown">
+                                @await Component.InvokeAsync("CustomPagesHeader")
+                            </div>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -54,12 +65,6 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/tinymce/tinymce.min.js"></script>
-    <script>
-        tinymce.init({
-            selector: '#HtmlContent'
-        });
-    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
