--- a/OnlineSaleSiteAuth/Views/_ViewImports.cshtml
+++ b/OnlineSaleSiteAuth/Views/_ViewImports.cshtml
@@ -5,7 +5,7 @@
 @using OnlineSaleSiteAuth.Models.Basket
 @using OnlineSaleSiteAuth.Models.Coupon
 @using OnlineSaleSiteAuth.Models.Campaign
-@using OnlineSaleSiteAuth.Models.TinyMce
+@using OnlineSaleSiteAuth.Models.CustomPage
 
 @using OnlineSalesAuth.Persistence
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
