--- a/OnlineSaleSiteAuth/Views/Shared/_Layout.cshtml
+++ b/OnlineSaleSiteAuth/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="CustomPage" asp-action="Create">Add Custom Page</a>
                             </li>
+                            <li class="navitem">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Campaign" asp-action="Create">Add Campaign</a>
+                            </li>
                         }
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="customPageDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
