--- a/OnlineSaleSiteAuth/Views/Product/Index.cshtml
+++ b/OnlineSaleSiteAuth/Views/Product/Index.cshtml
@@ -3,6 +3,7 @@
     var search = @ViewContext.HttpContext.Request.Query["Search"];
     var pageIndex = @ViewContext.HttpContext.Request.Query["PageIndex"].SingleOrDefault() ?? "0";
     var pageSize = @ViewContext.HttpContext.Request.Query["PageSize"].SingleOrDefault() ?? int.MaxValue.ToString();
+    var categories = ViewContext.HttpContext.Request.Query["Categories"].ToArray();
 }
 <div id="cartContainer" style="float:right; margin-top: 20px; height:200px">
     <a href="/Basket/Index" class="btn btn-lg position-relative" id="cartButton">
@@ -18,11 +19,18 @@
     <a asp-action="Create" class="btn btn-success" style="margin-top: 20px; margin-bottom:20px;">Add Product</a><br />
     <div class="container">
         <div class="row">
-            <div class="col-8">
-                <div class="input-group">
-                    <input type="text" name="Search" value="@search" class="form-control" style="margin-bottom: 20px; max-width:70%" />
-                    <div class="input-group-append ml-2" style="margin-bottom: 20px;">
-                        <button type="submit" class="btn btn-primary" style="width: 100%;">
+            <div class="col-md-6">
+                <div class="input-group"> 
+                  <input type="text" name="Search" value="@search" class="form-control" style="margin-bottom: 20px;" placeholder="Search..." />
+                    <select name="Categories" class="form-control" multiple>
+                        <option value="">-- Kategoriler --</option >
+                        @foreach (var category in ViewBag.Categories)
+                        {
+                            <option value="@category.Value">@category.Text</option>
+                        }
+                    </select>
+                    <div class="input-group-append ml-2">
+                        <button type="submit" class="btn btn-primary">
                             <i class="fa fa-search" aria-hidden="true"></i>
                         </button>
                     </div>
