--- a/OnlineSaleSiteAuth/Views/Campaign/Create.cshtml
+++ b/OnlineSaleSiteAuth/Views/Campaign/Create.cshtml
@@ -4,6 +4,7 @@
     <div class="row">
         <div class="col-md-4" style="margin-bottom:20px;">
             <div class="row">
+                <span>Name: </span>
                 <div class="col-md-12" style="margin-bottom:5px">
                     <input asp-for="Name" class="form-control ms-0" />
                     <span asp-validation-for="Name" class="text-danger"></span>
