--- a/OnlineSaleSiteAuth/Views/Basket/Index.cshtml
+++ b/OnlineSaleSiteAuth/Views/Basket/Index.cshtml
@@ -70,7 +70,7 @@
                             <i class="fa fa-minus-circle" aria-hidden="true"></i>
                         </button>
                         <button type="button" class="btn btn-success btnAdd" data-id="@item.ProductId">
-                            <i class="fa fa-plus-square-o" aria-hidden="true"></i>
+                            <i class="fa fa-plus" aria-hidden="true"></i>
                         </button>
                     </td>
                 </tr>
