--- a/OnlineSaleSiteAuth/Views/Product/Index.cshtml
+++ b/OnlineSaleSiteAuth/Views/Product/Index.cshtml
@@ -8,143 +8,172 @@
     var pageSize = @ViewContext.HttpContext.Request.Query["PageSize"].SingleOrDefault() ?? "50";
     var categories = ViewContext.HttpContext.Request.Query["Categories"].ToArray();
 }
-
-<div id="cartContainer" style="float:right; margin-top: 20px;">
-    <a href="/Basket/Index" class="btn btn-lg position-relative" id="cartButton">
-        <i class="fa-sharp fa-solid fa-cart-shopping"></i>
-        <span id="cartCount" class="badge rounded-pill bg-danger position-absolute top-0-100 translate-middle p-1" style="font-size: 0.8em;">
-            @ViewBag.TotalItemCount
-        </span>
-    </a>
-</div>
-<form asp-action="Index" method="get" id="pagedList">
-    <a asp-action="Create" class="btn btn-success" style="margin-top: 20px; margin-bottom:20px;">Add Product</a><br />
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="input-group">
-                    <input type="text" name="Search" value="@search" class="form-control" style="margin-bottom: 20px; padding-right:10px;" placeholder="Search..." />
-                    <div class="input-group-append">
-                        <button type="submit" class="btn btn-primary" style="border-radius:0;">
-                            <i class="fa fa-search" aria-hidden="true"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <select name="Categories" class="form-control" multiple>
-                        <option value="">-- Kategoriler --</option>
-                        @foreach (var category in ViewBag.Categories)
-                        {
-                            <option value="@category.Value">@category.Text</option>
-                        }
-                    </select>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="container">
-
-        <div class="row">
-            @{
-                var counter = 1;
-            }
-            @foreach (var product in Model.Data)
-            {
-                counter++;
-                <div class="col-md-3 mb-4" id="product_@product.Id">
-                    <div class="card">
-
-                        <div id="carousel_@product.Id" class="carousel slide" data-ride="carousel">
-                            <div class="carousel-inner">
-                                @{
-                                    var firstImage = product.Images.FirstOrDefault();
-                                }
-
-                                @foreach (var i in product.Images)
-                                {
-                                    <div class="carousel-item @(i == firstImage ? "active" : "")">
-                                        <img class="d-block w-100" src="@i.Path">
-                                    </div>
-                                }
-
-                            </div>
-                            <a class="carousel-control-prev" href="#carousel_@product.Id" role="button" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="carousel-control-next" href="#carousel_@product.Id" role="button" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">@product.Name</h5>
-                            <p class="card-text">@product.Name</p>
-                            <p class="card-text">
-                                <strong>Price:</strong>
-                                @if (product.Campaigns.Any(c => c.DiscountedPrice > 0))
-                                {
-                                    @product.Campaigns.Where(c => c.DiscountedPrice > 0).Select(c => c.DiscountedPrice).First()
-                                }
-                                else
-                                {
-                                    @product.Price
-                                }
-                            </p>
-                            <button type="button" class="btn btn-success btnAdd" data-id="@product.Id">
-                                <i class="fa fa-plus-square-o" aria-hidden="true"></i>
-                            </button>
-                            @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
-                            {
-                                <button type="button" class="btn btn-danger btnDelete" data-id="@product.Id">
-                                    <i class="fa fa-minus-circle" aria-hidden="true"></i>
-                                </button>
-                                <a href="/Product/Update/@product.Id" class="btn btn-primary">
-                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                </a>
-                            }
-                        </div>
-                    </div>
-                </div>
-            }
-
-        </div>
-    </div>
-
-    <div style="float:left;">
-        @for (int i = 0; i < Model.TotalPage; i++)
-        {
-            <button type="submit" value="@i" class="btn @(pageIndex == i.ToString() ? "btn-success": "btn-info")" name="PageIndex">@(i + 1)</button>
+<html lang="en">
+<head>
+    <title>Products</title>
+    <style>
+        #canvas {
+            display: block;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
         }
+    </style>
+</head>
+<body>
+    <canvas id="canvas"></canvas>
+    <div id="backgroundAnimationContainer">
+        <div id="cartContainer" style="float:right; margin-top: 20px;">
+            <a href="/Basket/Index" class="btn btn-lg position-relative" id="cartButton">
+                <i class="fa-sharp fa-solid fa-cart-shopping"></i>
+                <span id="cartCount" class="badge rounded-pill bg-danger position-absolute top-0-100 translate-middle p-1" style="font-size: 0.8em;">
+                    @ViewBag.TotalItemCount
+                </span>
+            </a>
+        </div>
+        <form asp-action="Index" method="get" id="pagedList">
+            <a asp-action="Create" class="btn btn-success" style="margin-top: 20px; margin-bottom:20px;">Add Product</a><br />
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <input type="text" name="Search" value="@search" class="form-control" style="margin-bottom: 20px; padding-right:10px;" placeholder="Search..." />
+                            <div class="input-group-append">
+                                <button type="submit" class="btn btn-primary" style="border-radius:0;">
+                                    <i class="fa fa-search" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <select name="Categories" class="form-control" multiple>
+                                <option value="">-- Kategoriler --</option>
+                                @foreach (var category in ViewBag.Categories)
+                                {
+                                    <option value="@category.Value">@category.Text</option>
+                                }
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="container">
+
+                <div class="row">
+                    @{
+                        var counter = 1;
+                    }
+
+                    @foreach (var product in Model.Data)
+                    {
+                        counter++;
+                        <div class="col-md-3 mb-4" id="product_@product.Id" style="padding-top: 15px; ">
+                            <div class="card shadow-sm" id="productCards">
+
+
+                                <div id="carousel_@product.Id" class="carousel slide" data-ride="carousel">
+                                    <div class="carousel-inner">
+                                        @{
+                                            var firstImage = product.Images.FirstOrDefault();
+                                        }
+
+                                        @foreach (var i in product.Images)
+                                        {
+                                            <div class="carousel-item @(i == firstImage ? "active" : "")">
+                                                <img class="d-block w-100" src="@i.Path">
+                                            </div>
+                                        }
+
+                                    </div>
+                                    <a class="carousel-control-prev" href="#carousel_@product.Id" role="button" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carousel_@product.Id" role="button" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">@product.Name</h5>
+                                    <p class="card-text">@product.Name</p>
+                                    <p class="card-text">
+                                        <strong>Price:</strong>
+                                        @if (product.Campaigns.Any(c => c.DiscountedPrice > 0))
+                                        {
+                                            @product.Campaigns.Where(c => c.DiscountedPrice > 0).Select(c => c.DiscountedPrice).First()
+                                        }
+                                        else
+                                        {
+                                            @product.Price
+                                        }
+                                    </p>
+                                    <button type="button" class="btn btn-success btnAdd" data-id="@product.Id">
+                                        <i class="fa fa-plus" aria-hidden="true"></i>
+                                    </button>
+                                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                                    {
+                                        <button type="button" class="btn btn-danger btnDelete" data-id="@product.Id">
+                                            <i class="fa fa-minus-circle" aria-hidden="true"></i>
+                                        </button>
+                                        <a href="/Product/Update/@product.Id" class="btn btn-primary">
+                                            <i class="fa fa-pencil" aria-hidden="true"></i>
+                                        </a>
+                                    }
+                                </div>
+                            </div>
+
+                        </div>
+
+                    }
+
+                </div>
+            </div>
+
+
+
+            <div style="float:left;">
+                @for (int i = 0; i < Model.TotalPage; i++)
+                {
+                    <button type="submit" value="@i" class="btn @(pageIndex == i.ToString() ? "btn-success": "btn-info")" name="PageIndex">@(i + 1)</button>
+                }
+            </div>
+            <select name="PageSize" class="form-control" style="float:right; width:200px;" onchange="document.getElementById('pagedList').submit()">
+                <!option value="1" @(pageSize == "1" ? "selected" : string.Empty)>
+                1
+                </!option>
+                <!option value="5" @(pageSize == "5" ? "selected" : string.Empty)>
+                5
+                </!option>
+                <!option value="20" @(pageSize == "20" ? "selected" : string.Empty)>
+                20
+                </!option>
+                <!option value="50" @(pageSize == "50" ? "selected" : string.Empty)>
+                50
+                </!option>
+                <!option value="100" @(pageSize == "100" ? "selected" : string.Empty)>
+                100
+                </!option>
+                <!option value="@int.MaxValue" @(pageSize == int.MaxValue.ToString() ? "selected" : string.Empty)>
+                Hepsi
+                </!option>
+            </select>
+        </form>
     </div>
-    <select name="PageSize" class="form-control" style="float:right; width:200px;" onchange="document.getElementById('pagedList').submit()">
-        <!option value="1" @(pageSize == "1" ? "selected" : string.Empty)>
-        1
-        </!option>
-        <!option value="5" @(pageSize == "5" ? "selected" : string.Empty)>
-        5
-        </!option>
-        <!option value="20" @(pageSize == "20" ? "selected" : string.Empty)>
-        20
-        </!option>
-        <!option value="50" @(pageSize == "50" ? "selected" : string.Empty)>
-        50
-        </!option>
-        <!option value="100" @(pageSize == "100" ? "selected" : string.Empty)>
-        100
-        </!option>
-        <!option value="@int.MaxValue" @(pageSize == int.MaxValue.ToString() ? "selected" : string.Empty)>
-        Hepsi
-        </!option>
-    </select>
-</form>
 
 
-@section Scripts
-{
-    <script src="~/js/product/index.js"></script>
-}
+    @section Scripts
+    {
+        <script type="module" src="~/js/animation/main.js"></script>
+
+        <script src="~/js/product/index.js"></script>
+
+    }
+</body>
+</html>
