Added Menu item and fixed view

--- a/OnlineSaleSiteAuth/Views/Basket/Index.cshtml
+++ b/OnlineSaleSiteAuth/Views/Basket/Index.cshtml
@@ -25,7 +25,7 @@
 </head>
 <body>
     <h1>Basket List</h1>
-    <div class="container">
+    <div class="container" style="margin-bottom:20px; margin-left:0px;" >
         <div class="row">
             <div class="col-md-6">
                 <div class="input-group">
